# excel-report-automation

./: .gitignore  README.md  config.yaml  macro_manager.xlsx  pyproject.toml  requirements.txt  run.bat
src/excel_report_automation/: __init__.py  config_reader.py  macro_runner.py  mail_sender.py  main.py
